--- a/style.css
+++ b/style.css
@@ -1,3 +1,70 @@
 body{
     background-color: #F5FFFA;
 }
+
+/* Cabeçalho */
+
+header {
+    padding: 20px 0;
+    color: #F5FFFA;
+    background-color: #1C1C1C;
+}
+
+nav {
+    position: absolute;
+    top: 110px;
+    right: 0;
+}
+
+.container{
+    width: 940px;
+    height: 200px;
+    position: relative;
+    margin:  0 auto;
+}
+
+nav li {
+    display: inline;
+    margin: 0 0 0 15px;
+}
+
+nav a {
+    text-transform: uppercase;
+    color: #00BFFF;
+    font-weight: bold;
+    font-size: 25;
+    text-decoration: none;
+}
+
+nav a:hover {
+    text-decoration: underline;
+    color: #ADD8E6;
+}
+
+/* Sobre Mim */
+
+.sobreMin h2 {
+    font-weight: bold;
+    font-size: 25px;
+    color: #00BFFF;
+    text-align: center;
+    padding: 10px 10px;
+}
+
+.sobreMin h3 {
+    font-weight: bold;
+    font-size: 20px;
+    color: #1E90FF;
+    text-align: center;
+    padding: 20px 10px;
+}
+
+.sobreMin img{
+    float: left;
+    padding: 10px;
+    margin: 0px 10px 10px 0;
+    max-width: 180px;
+}
+
+/* Serviços */
+
